# mandelbrot

./: CMakeLists.txt  LICENSE  main.cpp  man-opencl.cpp  man-opencl.h  man-sycl.cpp  man-sycl.h  man-thrd.cpp  man-thrd.h  man.h  mpt.cl
